@@ -22,11 +22,13 @@
 
 package org.gjt.sp.jedit.syntax;
 
+import javax.swing.text.Segment;
+
 /**
  * A dummy token handler that discards tokens.
  *
  * @author Slava Pestov
- * @version $Id: DummyTokenHandler.java,v 1.4 2003/02/07 21:57:43 spestov Exp $
+ * @version $Id: DummyTokenHandler.java,v 1.5 2003/06/03 22:02:40 spestov Exp $
  * @since jEdit 4.1pre1
  */
 public class DummyTokenHandler implements TokenHandler
@@ -41,13 +43,14 @@ public class DummyTokenHandler implements TokenHandler
 	//{{{ handleToken() method
 	/**
 	 * Called by the token marker when a syntax token has been parsed.
+	 * @param seg The segment containing the text
 	 * @param id The token type (one of the constants in the
 	 * {@link Token} class).
 	 * @param offset The start offset of the token
 	 * @param length The number of characters in the token
 	 * @param context The line context
-	 * @since jEdit 4.1pre1
+	 * @since jEdit 4.2pre3
 	 */
-	public void handleToken(byte id, int offset, int length,
-		TokenMarker.LineContext context) {}
+	public void handleToken(Segment seg, byte id, int offset, int length,
+		TokenMarker.LineContext context) {} //}}}
 }
